--- a/project/public/stylesheets/style.css
+++ b/project/public/stylesheets/style.css
@@ -1,8 +1,103 @@
-body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+} */
+
+div.page-header {
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  text-shadow: 4px 4px rgba(51, 51, 51, .25);
+  font-size: 90px;
+  color: rgba(158, 114, 89, .95);
+}
+
+#sunset {
+  background: url("https://i.imgur.com/qRnLqdU.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: #333333;
+  text-align: center;
+}
+
+#nav_header {
+  position: sticky;
+}
+
+#postButton:hover {
+  background-color: #333333;
+  /* border-color: rgba(158, 114, 89, .95); */
+}
+
+
+body {
+  background-color: #333333;
+  text-align: center;
+}
+
+textarea {
+  box-sizing: border-box;
+  border: 5px solid #333333;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: rgba(217, 217, 217, .7);
+  color: #333333;
+  padding: 5px 10px;
+  width: 50%;
+  height: 200px;
+  margin: auto;
+  outline: none;
+}
+
+
+.black-background {
+  background-color: #333333;
+  border-color: rgba(158, 114, 89, .95);
+}
+
+/* #footerlink1 #footerlink2 #footerlink3 {
+  font-size: 35px;
+  text-decoration: none;
+  color: #333333;
+} */
+#footerlink1, #footerlink2, #footerlink3 {
+  padding: 15px;
+  font-size: 30px;
+  text-decoration: none;
+  color: #333333;
+}
+
+section {
+  text-align: center;
+  color: white;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 35px;
+  line-height: 35px;
+  background-color: rgba(217, 217, 217, .7);
+}
+
+/* media screen width reduced */
+
+@media screen and (max-width: 600px) {
+  div.page-header {
+    font-size: 30px;
+    color: white;
+  }
+  textarea {
+    box-sizing: border-box;
+    border: 5px solid white;
+    border-radius: 4px;
+    width: 90%;
+    height: 20%;
+  }
+  body {
+    background-size: auto;
+  }
 }
