--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -8,4 +8,147 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
+
+  <title>Ask it</title>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+  <!--Navigation bar section -->
+  <div id="nav_header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Ask it Basket</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Portfolio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Blog
+        </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Quick Post</a>
+              <a class="dropdown-item" href="#">Trending</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Insomnia Ridden</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <!--Sunset background with title and post form  -->
+  <div id="sunset">
+    <div class="container text-center">
+      <div class="page-header">-Ask it Basket-</div>
+    </div>
+    <div class="container">
+<form action="POST">
+  <div class="form-group">
+    <textarea class="postControl" rows="5" id="areaPost" placeholder="Your post..." minlength="10" required="true"></textarea>
+  </div>
+  <input id="postButton" type="submit" class="btn btn-primary black-background white" value="Post">
+      </form>
+    </div>
+  </div>
+  <br>
+
+  <!-- Previous posts section -->
+  <div id="past_post">
+    <form>
+      <section>
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6">
+            <blockquote class="blockquote text-center">
+              <p id="text1" class="mb-0"></p>
+              <footer class="blockquote-footer">
+            </blockquote>
+          </div>
+          <div class="col-sm-3"></div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6">
+            <blockquote class="blockquote text-center">
+              <p id="text2" class="mb-0"></p>
+              <footer class="blockquote-footer">
+            </blockquote>
+          </div>
+          <div class="col-sm-3"></div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6">
+            <blockquote class="blockquote text-center">
+              <p id="text3" class="mb-0"></p>
+              <footer class="blockquote-footer">
+            </blockquote>
+          </div>
+          <div class="col-sm-3"></div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6">
+            <blockquote class="blockquote text-center">
+              <p id="text4" class="mb-0"></p>
+              <footer class="blockquote-footer">
+            </blockquote>
+          </div>
+          <div class="col-sm-3"></div>
+        </div>
+      </section>
+    </form>
+  </div>
+
+  <!--Footer  -->
+  <footer class="footer">
+    <div class="container">
+      <span class="text-muted">
+        <a id="footerlink1" href="https://twitter.com/reggie_romano?ref_src=twsrc%5Etfw"><i class="fa fa-twitter"></i></a>
+        <a id="footerlink2" href="https://www.instagram.com/romanoreggie/"><i class="fa fa-instagram"></i></a>
+        <a id="footerlink3" href="https://www.facebook.com/reggie.romano.9"><i class="fa fa-facebook"></i></a>  </span>
+    </div>
+  </footer>
+  
+  <script src="/javascripts/app.js" type="text/javascript"> </script>
+
+</body>
+
+
+
 </html>
