--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -34,7 +34,7 @@
   <!--Navigation bar section -->
   <div id="nav_header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Ask it Basket</a>
+      <a class="navbar-brand" href="#"><%= title %></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -43,9 +43,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Home</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Portfolio</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Blog
@@ -57,9 +57,9 @@
               <a class="dropdown-item" href="#">Insomnia Ridden</a>
             </div>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -144,7 +144,7 @@
         <a id="footerlink3" href="https://www.facebook.com/reggie.romano.9"><i class="fa fa-facebook"></i></a>  </span>
     </div>
   </footer>
-  
+
   <script src="/javascripts/app.js" type="text/javascript"> </script>
 
 </body>
