--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -1,15 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -34,7 +22,7 @@
   <!--Navigation bar section -->
   <div id="nav_header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#"><%= title %></a>
+      <a class="navbar-brand" href="#">Ask it</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -89,7 +77,7 @@
           <div class="col-sm-3"></div>
           <div class="col-sm-6">
             <blockquote class="blockquote text-center">
-              <p id="text1" class="mb-0"></p>
+              <p id="text1" class="mb-0"><%= data[1].post %></p>
               <footer class="blockquote-footer">
             </blockquote>
           </div>
