--- a/project/public/stylesheets/style.css
+++ b/project/public/stylesheets/style.css
@@ -3,7 +3,8 @@ div.page-header {
   text-align: center;
   text-shadow: 4px 4px rgba(51, 51, 51, .25);
   font-size: 90px;
-  color: rgba(158, 114, 89, .95);
+  /* color: rgba(158, 114, 89, .95); */
+  color: rgba(253, 249, 233, .90);
 }
 
 #sunset {
@@ -76,7 +77,7 @@ textarea {
 
 section {
   text-align: center;
-  color: white;
+  color: rgba(253, 249, 233, .90);;
 }
 .footer {
   position: absolute;
