--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -50,6 +50,15 @@
           </li> -->
         </ul>
       </div>
+      <form class="form-inline">
+        <div class="form-group">
+          <input type="text" class="form-control" id="validationCustom01" placeholder="Email" required>
+            <div class="valid-feedback">
+              Looks Good!
+              </div>
+          <input type="password" id="inputPassword6" class="form-control mx-sm-3" aria-describedby="passwordHelpInline" placeholder="Password">
+        </div>
+      </form>
     </nav>
   </div>
 
@@ -74,55 +83,45 @@
   </div>
   <br>
 
-  <!-- Previous posts section -->
-
 
      <form>
       <section>
         <div id="postBox" class="jumbotron">
           <div class="container">
-              <p class="lead"><%= data[data.length-1].post %></p>
-              <footer class="blockquote-footer"><%= data[data.length-1].name %></footer>
+              <p id="post1"><%= data[data.length-1].post %></p>
+              <footer id="name1" class="blockquote-footer"><%= data[data.length-1].name %></footer>
             </br>
               <form action="/comment" method="post">
                 <blockquote class="blockquote text-right">
                   <div class="container">
-                    <textarea id="commentBox" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
+                    <textarea id="commentBox1" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
                   </div>
                   <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
                 </blockquote>
+              </br>
+              <form id='delete' action='/post/<%= data._id %>?_method=Delete' method= 'POST'>
+                <button type="button" class="btn btn-danger" onclick="removePost()">Delete Post</button>
               </form>
+            </form>
               </div>
           </div>
-      </section><section>
+      </section>
+      <section>
         <div id="postBox" class="jumbotron">
           <div class="container">
-              <p class="lead"><%= data[data.length-2].post %></p>
-              <footer class="blockquote-footer"><%= data[data.length-2].name %></footer>
+              <p id="post2"><%= data[data.length-2].post %></p>
+              <footer id="name2" class="blockquote-footer"><%= data[data.length-2].name %></footer>
             </br>
               <form action="/comment" method="post">
                 <blockquote class="blockquote text-right">
                   <div class="container">
-                    <textarea id="commentBox" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
+                    <textarea id="commentBox2" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
                   </div>
                   <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
                 </blockquote>
+              </br>
+                <button type="button" class="btn btn-danger" onclick="removePost2()">Delete Post</button>
               </form>
-              </div>
-          </div>
-      </section><section>
-        <div id="postBox" class="jumbotron">
-          <div class="container">
-              <p class="lead"><%= data[data.length-3].post %></p>
-              <footer class="blockquote-footer"><%= data[data.length-3].name %></footer>
-            </br>
-              <form action="/comment" method="post">
-                <blockquote class="blockquote text-right">
-                  <div class="container">
-                    <textarea id="commentBox" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
-                  </div>
-                  <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
-                </blockquote>
               </form>
               </div>
           </div>
@@ -130,16 +129,19 @@
       <section>
         <div id="postBox" class="jumbotron">
           <div class="container">
-              <p class="lead"><%= data[data.length-4].post %></p>
-              <footer class="blockquote-footer"><%= data[data.length-4].name %></footer>
+              <p id="post3" class="lead"><%= data[data.length-3].post %></p>
+              <footer id="name3" class="blockquote-footer"><%= data[data.length-3].name %></footer>
             </br>
               <form action="/comment" method="post">
                 <blockquote class="blockquote text-right">
                   <div class="container">
-                    <textarea id="commentBox" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
+                    <textarea id="commentBox3" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
                   </div>
                   <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
                 </blockquote>
+              </br>
+                <button type="button" class="btn btn-danger" onclick="removePost3()">Delete Post</button>
+              </form>
               </form>
               </div>
           </div>
@@ -147,16 +149,39 @@
       <section>
         <div id="postBox" class="jumbotron">
           <div class="container">
-              <p class="lead"><%= data[data.length-5].post %></p>
-              <footer class="blockquote-footer"><%= data[data.length-5].name %></footer>
+              <p id="post4" class="lead"><%= data[data.length-4].post %></p>
+              <footer id="name4" class="blockquote-footer"><%= data[data.length-4].name %></footer>
             </br>
               <form action="/comment" method="post">
                 <blockquote class="blockquote text-right">
                   <div class="container">
-                    <textarea id="commentBox" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
+                    <textarea id="commentBox4" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
                   </div>
                   <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
                 </blockquote>
+              </br>
+                <button type="button" class="btn btn-danger" onclick="removePost4()">Delete Post</button>
+              </form>
+              </form>
+              </div>
+          </div>
+      </section>
+      <section>
+        <div id="postBox" class="jumbotron">
+          <div class="container">
+              <p id="post5" class="lead"><%= data[data.length-5].post %></p>
+              <footer id="name5" class="blockquote-footer"><%= data[data.length-5].name %></footer>
+            </br>
+              <form action="/comment" method="post">
+                <blockquote class="blockquote text-right">
+                  <div class="container">
+                    <textarea id="commentBox5" rows="5" type="text" class="form-control" placeholder="Your comment..." name="comment"></textarea>
+                  </div>
+                  <p class="mb-0" id="commentButton" onclick="commentForm()"><button type="submit" class="btn btn-secondary btn-sm">Add Comment</button></p>
+                </blockquote>
+              </br>
+                <button type="button" class="btn btn-danger" onclick="removePost5()">Delete Post</button>
+              </form>
               </form>
               </div>
           </div>
